--- a/Assignment05/app/src/main/AndroidManifest.xml
+++ b/Assignment05/app/src/main/AndroidManifest.xml
@@ -12,8 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Assignment05"
         tools:targetApi="31">
+
+        <activity android:name=".Home"></activity>
+        <activity android:name=".Signup"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
