--- a/Assignment07/app/src/main/AndroidManifest.xml
+++ b/Assignment07/app/src/main/AndroidManifest.xml
@@ -13,11 +13,32 @@
         android:theme="@style/Theme.Assignement7"
         tools:targetApi="31">
         <activity
-            android:name=".Signup"
+            android:name=".memberMenu"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".SearchBooks"
             android:exported="false" />
+        <activity
+            android:name=".managePublisher"
+            android:exported="false" />
+        <activity
+            android:name=".mangeBranch"
+            android:exported="false" />
+        <activity
+            android:name=".manageBooks"
+            android:exported="false" />
+        <activity
+            android:name=".lending"
+            android:exported="false" />
+        <activity
+            android:name=".adminMenu"
+            android:exported="false"
+            android:theme="@style/Theme.Assignement7" />
+        <activity
+            android:name=".AdminLogin"
+            android:exported="false" />
+        <activity android:name=".Signup" /> <!-- android:exported="false" /> -->
+        <activity android:name=".Login" /> <!-- android:exported="false" /> -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
